# backend/internal/biz/handler/insttask/insttask_service.go
@@ -3,6 +3,7 @@ package insttask
 import (
 	"github.com/wegoteam/weflow/internal/base"
 	"github.com/wegoteam/weflow/internal/biz/entity/bo"
+	"github.com/wegoteam/weflow/internal/consts"
 	"github.com/wegoteam/weflow/pkg/common/entity"
 	"github.com/wegoteam/weflow/pkg/service"
 )
@@ -10,10 +11,13 @@ import (
 // GetInitiateInstTaskList
 // @Description: 获取发起中的实例任务列表
 // @param: param 查询参数
-// @return base.Page[bo.InstTaskResult]
-func GetInitiateInstTaskList(param *entity.InstTaskQueryBO) base.Page[bo.InstTaskResult] {
+// @return *base.Response
+func GetInitiateInstTaskList(param *entity.InstTaskQueryBO) *base.Response {
 	//已发列表；获取发起人的实例任务
-	pageResult := service.PageInitiatingInstTasks("547", param)
+	pageResult, err := service.PageInitiatingInstTasks(param)
+	if err != nil {
+		return base.Fail(consts.ERROR, err.Error())
+	}
 	insttask := make([]bo.InstTaskResult, len(pageResult.Records))
 	for i, instTask := range pageResult.Records {
 		insttask[i] = bo.InstTaskResult{
@@ -42,5 +46,5 @@ func GetInitiateInstTaskList(param *entity.InstTaskQueryBO) base.Page[bo.InstTas
 		PageNum:  param.PageNum,
 		PageSize: param.PageSize,
 	}
-	return *page
+	return base.OK(page)
 }
