# backend/internal/biz/handler/usertask/usertask_service.go
@@ -3,6 +3,7 @@ package usertask
 import (
 	"github.com/wegoteam/weflow/internal/base"
 	"github.com/wegoteam/weflow/internal/biz/entity/bo"
+	"github.com/wegoteam/weflow/internal/consts"
 	"github.com/wegoteam/weflow/pkg/common/entity"
 	"github.com/wegoteam/weflow/pkg/service"
 )
@@ -10,8 +11,11 @@ import (
 // GetTodoUserTaskList
 // @Description: 获取待办用户任务列表
 // @return base.Page[bo.UserTaskResult]
-func GetTodoUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTaskTodoResult] {
-	pageResult := service.PageTodoUserTasks("547", param)
+func GetTodoUserTaskList(param *entity.UserTaskQueryBO) *base.Response {
+	pageResult, err := service.PageTodoUserTasks(param)
+	if err != nil {
+		return base.Fail(consts.ERROR, err.Error())
+	}
 	usertask := make([]bo.UserTaskTodoResult, len(pageResult.Records))
 	for i, val := range pageResult.Records {
 		usertask[i] = bo.UserTaskTodoResult{
@@ -36,15 +40,18 @@ func GetTodoUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTaskTod
 		PageNum:  param.PageNum,
 		PageSize: param.PageSize,
 	}
-	return *page
+	return base.OK(page)
 }
 
 // GetDoneUserTaskList
 // @Description: 获取已办用户任务列表
 // @param: param 查询参数
 // @return base.Page[bo.UserTaskResult]
-func GetDoneUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTaskResult] {
-	pageResult := service.PageDoneUserTasks("547", param)
+func GetDoneUserTaskList(param *entity.UserTaskQueryBO) *base.Response {
+	pageResult, err := service.PageDoneUserTasks(param)
+	if err != nil {
+		base.Fail(consts.ERROR, err.Error())
+	}
 	usertask := make([]bo.UserTaskResult, len(pageResult.Records))
 	for i, val := range pageResult.Records {
 		usertask[i] = bo.UserTaskResult{
@@ -69,15 +76,18 @@ func GetDoneUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTaskRes
 		PageNum:  param.PageNum,
 		PageSize: param.PageSize,
 	}
-	return *page
+	return base.OK(page)
 }
 
 // GetReceivedUserTaskList
 // @Description: 获取用户任务列表（我收到的）
 // @param: param 查询参数
 // @return base.Page[bo.UserTaskResult]
-func GetReceivedUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTaskResult] {
-	pageResult := service.PageTodoUserTasks("547", param)
+func GetReceivedUserTaskList(param *entity.UserTaskQueryBO) *base.Response {
+	pageResult, err := service.PageReceivedUserTasks(param)
+	if err != nil {
+		base.Fail(consts.ERROR, err.Error())
+	}
 	usertask := make([]bo.UserTaskResult, len(pageResult.Records))
 	for i, val := range pageResult.Records {
 		usertask[i] = bo.UserTaskResult{
@@ -102,5 +112,5 @@ func GetReceivedUserTaskList(param *entity.UserTaskQueryBO) base.Page[bo.UserTas
 		PageNum:  param.PageNum,
 		PageSize: param.PageSize,
 	}
-	return *page
+	return base.OK(page)
 }
