# backend/internal/biz/router/insttask/insttask_router.go
@@ -4,10 +4,10 @@ import (
 	"context"
 	"github.com/cloudwego/hertz/pkg/app"
 	"github.com/cloudwego/hertz/pkg/app/server"
-	"github.com/cloudwego/hertz/pkg/protocol/consts"
-	"github.com/wegoteam/weflow/internal/base"
+	hertzconsts "github.com/cloudwego/hertz/pkg/protocol/consts"
 	"github.com/wegoteam/weflow/internal/biz/entity/vo"
-	"github.com/wegoteam/weflow/internal/biz/handler/insttask"
+	insttaskService "github.com/wegoteam/weflow/internal/biz/handler/insttask"
+	"github.com/wegoteam/weflow/internal/consts"
 	"github.com/wegoteam/weflow/pkg/common/entity"
 )
 
@@ -26,12 +26,13 @@ func Register(h *server.Hertz) {
 // @Description 获取发起的实例任务列表（已发起）
 // @Accept application/json
 // @Produce application/json
-// @Success 200 {object} base.Response{data=base.Page[bo.InstTaskResult]{records=[]bo.InstTaskResult}}
+// @Success 200 {object} bo.InstTaskResult
 // @Router /insttask/initiated [get]
 func GetInitiateInstTaskList(ctx context.Context, rc *app.RequestContext) {
 	var req vo.InstTaskQueryVO
 	rc.Bind(&req)
 	param := &entity.InstTaskQueryBO{
+		UserID:          consts.UserID,
 		PageSize:        req.PageSize,
 		PageNum:         req.PageNum,
 		TaskName:        req.TaskName,
@@ -42,9 +43,6 @@ func GetInitiateInstTaskList(ctx context.Context, rc *app.RequestContext) {
 		FinishTimeStart: req.FinishTimeStart,
 		FinishTimeEnd:   req.FinishTimeEnd,
 	}
-	taskList := insttask.GetInitiateInstTaskList(param)
-	res := &base.Response{
-		Data: taskList,
-	}
-	rc.JSON(consts.StatusOK, res)
+	res := insttaskService.GetInitiateInstTaskList(param)
+	rc.JSON(hertzconsts.StatusOK, res)
 }
